@@ -30,7 +30,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'depends' => array(
 			'php' => '5.3.0-7.99.99',
 			'typo3' => '4.5.0-7.99.99',
-			'div2007' => '1.0.3-0.0.0',
+			'div2007' => '1.6.10-0.0.0',
 		),
 		'conflicts' => array(
 		),
