@@ -3,6 +3,8 @@ if (!defined ('TYPO3_MODE')) {
 	die ('Access denied.');
 }
 
+$GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY]['api'] = 'JambageCom\\Transactor\\Api\\PaymentApi';
+
 if (
 	TYPO3_MODE == 'BE' &&
 	!defined($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['cms']['db_layout']['addTables']['tx_transactor_transactions']['MENU'])
