@@ -1,5 +1,0 @@
-[Dolphin]
-AdditionalInfo=3
-Sorting=2
-Timestamp=2009,10,14,16,37,6
-ViewMode=1
