@@ -1,5 +1,9 @@
+2016-10-26 Franz Holzinger <franz@ttproducts.de>
+	* remove the parameter handleLib from the PaymentApi because it must always be set to transactor
+	* new feature: determine the payment costs. An addon to this extension can add the payment costs to the handling costs.
+
 2016-06-13 Franz Holzinger <franz@ttproducts.de>
-	* bugfix for PHP 7.x: The method init of tx_ttproducts_language cannot overload init of tx_div2007_alpha_language_base. init1 must be used instead.
+	* bugfix for PHP 7.x: The method init of tx_transactor_language cannot overload init of tx_div2007_alpha_language_base. init1 must be used instead.
 	* add new class PaymentApi for TYPO3 7.x.
 
 2016-05-02	Franz Holzinger <franz@ttproducts.de>
